\name{NEWS}
\title{News for \R Package \pkg{Pigenegene}}

\section{Changes in version 1.29.8 (2023-11-13)}{
  \subsection{Bug Fixes}{
    \itemize{
      \item Using "/" is avoided in  \code{determine.modules} and
      \code{learn.bn} functions to support running them on Windows.
      The \code{"toLocal"} task in \code{learn.bn()} and \code{sbatch()}
      still do not support Windows.
    }
  }
  \subsection{General}{
    \itemize{
      \item \code{inst/script/bn.calculation.job.R} is added as an
      example for the \code{bnCalculationJob} argument. 
    }
  }
}

\section{Changes in version 1.29.6 (2023-11-10)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item Setting \code{toCompact} to \code{TRUE} in
      \code{make.decision.tree()} has the same effect as \code{NULL}.
    }
  }
}

\section{Changes in version 1.29.4 (2023-11-09)}{
  \subsection{Bug Fixes}{
    \itemize{
      \item The \code{averaged.network()} function now correctly
      passed test data to the \code{module.heatmap()} function. 
    }
  }
  \subsection{Changes in existing functions}{
    \itemize{
      \item More details on the effect of test data in the documentation of
      \code{one.step.pigengene()} and \code{make.decision.tree()}
      functions. \code{make.decision.tree()} returns more information on
      performance.
    }
  }
}

\section{Changes in version 1.27.16 (2023-06-16)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item Scaling is done in the \code{compute.pigengene()} function
      to avoid the following error that Sogand detailes on her lano:
      Error in La.svd(x, nu, nv) : error code 1 from Lapack routine 'dgesdd'
    }
  }
}

\section{Changes in version 1.27.2 (2023-05-12)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item The \code{compute.pigengene()} function does not warn about
      almost constant genes.
    }
  }
}

\section{Changes in version 1.25.16 (2023-03-22)}{